# voiceTypeless

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUES.md  README.md  package.json  pnpm-lock.yaml
crates/core/: Cargo.toml
crates/core/src/domain/: error.rs  job.rs  mod.rs  serde_tests.rs  session.rs  settings.rs  stt.rs  types.rs
crates/core/src/infra/: metrics.rs  mod.rs  os_integration.rs  post_processor.rs
crates/core/src/infra/audio/: buffer.rs  capture.rs  mod.rs  pipeline.rs  preprocess.rs  thread_priority.rs  vad.rs
crates/core/src/infra/output/: clipboard.rs  mod.rs
crates/core/src/infra/rewriter/: claude.rs  mod.rs  noop.rs  prompts.rs
crates/core/src/infra/storage/: mod.rs  repository.rs
crates/core/src/infra/stt/: apple_speech.rs  mod.rs  noop.rs  pipeline.rs  soniox.rs  whisper.rs
crates/core/src/usecase/: app_service.rs  job_queue.rs  mod.rs
crates/core/tests/: stt_integration.rs
docs/: audio-pipeline.md
docs/contracts/: commands.md  error-codes.md  events.md  stt.md
docs/core/: state-machine.md
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  events.rs  lib.rs
src-tauri/swift-lib/.build/index-build/arm64-apple-macosx/debug/index/db/v13/p19508--74676b/: lock.mdb
src-tauri/swift-lib/Sources/VTSwift/: SpeechRecognizer.swift
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
ui/src/: App.css  App.tsx  index.css
ui/src/components/: AppShell.tsx  AudioMeter.tsx  ModeSelector.tsx  SetupBanner.tsx  StateIndicator.tsx  Toast.tsx  TranscriptView.tsx
ui/src/lib/: coreClient.ts  eventSetup.ts  types.ts
ui/src/pages/: DiagnosticsPage.tsx  DictionaryPage.tsx  HistoryPage.tsx  MetricsPage.tsx  PasteAllowlistPage.tsx  PermissionsPage.tsx  RecorderPage.tsx  SettingsPage.tsx
ui/src/store/: dictionaryStore.ts  historyStore.ts  navigationStore.ts  sessionStore.ts  settingsStore.ts  setupStore.ts  toastStore.ts
ui/src/test/: App.test.tsx  AppShell.test.tsx  ModeSelector.test.tsx  RecorderPage.test.tsx  StateIndicator.test.tsx  Toast.test.tsx  coreClient.test.ts  eventSetup.test.ts  mockTauri.ts  pages.test.tsx  stores.test.ts  types.test.ts  (+1 more)
(+6 files in other folders)
