[workspace]
members = ["src-tauri", "crates/core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
cpal = "0.15"
ringbuf = "0.4"
hound = "3.5"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
parking_lot = "0.12"
libc = "0.2"
